--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -55,3 +55,47 @@
   top: -8px;
   right: -8px;
 }
+
+@media (max-width: 1050px) {
+  .navbar .logo {
+    width: 140px;
+    font-size: 17px;
+  }
+  .navbar_right {
+    gap: 30px;
+  }
+  .navbar_right img {
+    width: 22px;
+  }
+  .navbar_right button {
+    padding: 8px 25px;
+  }
+}
+
+@media (max-width: 900px) {
+  .navbar .logo {
+    width: 120px;
+    font-size: 16px;
+  }
+  .navbar_right {
+    gap: 20px;
+  }
+  .navbar_right img {
+    width: 20px;
+  }
+  .navbar_right button {
+    padding: 7px 20px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 750px) {
+  .navbar_manu {
+    display: none;
+  }
+}
+@media (max-width: 450px) {
+  .navbar_right .search {
+    display: none;
+  }
+}
