--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -45,3 +45,13 @@
   background-color: gray;
   border: none;
 }
+@media (max-width: 750px) {
+  .footer_content {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+  }
+  .footer_copyright {
+    text-align: center;
+  }
+}
