--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
+  scroll-behavior: smooth;
 }
-
+body {
+  scroll-behavior: smooth;
+}
 body {
   min-height: 100vh;
 }
