--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,8 +11,8 @@
   flex-direction: column;
   align-items: start;
   gap: 1.5vw;
-  max-width: 50%;
-  bottom: 10%;
+  max-width: 65%;
+  bottom: 16%;
   left: 6vw;
   animation: fadeIn 3s;
 }
@@ -33,6 +33,7 @@
   background-color: white;
   font-size: max(1vw, 13px);
   border-radius: 50px;
+  cursor: pointer;
 }
 
 @media (max-width: 1050px) {
