--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -37,7 +37,7 @@
 }
 .navbar .active {
   padding-bottom: 2px;
-  border-bottom: 2px solid var(--fc);
+  border-bottom: 2px solid var(--tomato);
 }
 
 .navbar li {
@@ -91,11 +91,6 @@
 
 @media (max-width: 750px) {
   .navbar_manu {
-    display: none;
-  }
-}
-@media (max-width: 450px) {
-  .navbar_right .search {
     display: none;
   }
 }
